# CNN-Framework

./: MODULE.bazel
src/: ActivationLayer.h  CNN_Framework.h  Conv2D.h  Dense.cc  Dense.h  Layer.h  Loss.h  Optimizer.h
