module(name = "my_project", version = "0.1.0")


bazel_dep(name = "eigen", version = "3.4.0")

archive_override(
    module_name = "eigen",
    urls = ["https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.tar.gz"],
    strip_prefix = "eigen-3.4.0",
    build_file_content = """
cc_library(
    name = "eigen",
    hdrs = glob([
        "Eigen/**/*.h",
        "unsupported/Eigen/**/*.h",
    ]),
    includes = ["."],
    visibility = ["//visibility:public"],
)
""",
)

